testsuite/tests/tlks/should_fail/T16727b.hs
{-# LANGUAGE TopLevelKindSignatures #-}

module T16727b where

type T :: T
data T
